third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul_assign/unknown_field_attribute.rs
#[derive(derive_more::MulAssign)]
struct Foo(#[mul_assign(unknown)] i32);

fn main() {}
